Parsing/Part2_Calculator/calc.output
State 22 conflicts: 4 shift/reduce
State 23 conflicts: 4 shift/reduce
State 24 conflicts: 4 shift/reduce
State 25 conflicts: 4 shift/reduce
State 26 conflicts: 4 shift/reduce
State 27 conflicts: 4 shift/reduce
State 28 conflicts: 4 shift/reduce
State 29 conflicts: 4 shift/reduce
State 30 conflicts: 4 shift/reduce
State 31 conflicts: 4 shift/reduce
State 32 conflicts: 4 shift/reduce
State 33 conflicts: 4 shift/reduce
State 34 conflicts: 4 shift/reduce
State 35 conflicts: 4 shift/reduce
State 36 conflicts: 4 shift/reduce
State 37 conflicts: 4 shift/reduce


Grammar

    0 $accept: calc $end

    1 calc: /* empty */
    2     | mixed_expression T_NEWLINE
    3     | expression T_NEWLINE

    4 mixed_expression: T_FLOAT
    5                 | mixed_expression T_PLUS mixed_expression
    6                 | mixed_expression T_MINUS mixed_expression
    7                 | mixed_expression T_MULTIPLY mixed_expression
    8                 | mixed_expression T_DIVIDE mixed_expression
    9                 | T_LEFT mixed_expression T_RIGHT
   10                 | expression T_PLUS mixed_expression
   11                 | expression T_MINUS mixed_expression
   12                 | expression T_MULTIPLY mixed_expression
   13                 | expression T_DIVIDE mixed_expression
   14                 | mixed_expression T_PLUS expression
   15                 | mixed_expression T_MINUS expression
   16                 | mixed_expression T_MULTIPLY expression
   17                 | mixed_expression T_DIVIDE expression
   18                 | expression T_DIVIDE expression

   19 expression: T_INT
   20           | expression T_PLUS expression
   21           | expression T_MINUS expression
   22           | expression T_MULTIPLY expression
   23           | T_LEFT expression T_RIGHT


Terminals, with rules where they appear

$end (0) 0
error (256)
T_INT (258) 19
T_FLOAT (259) 4
T_PLUS (260) 5 10 14 20
T_MINUS (261) 6 11 15 21
T_MULTIPLY (262) 7 12 16 22
T_DIVIDE (263) 8 13 17 18
T_LEFT (264) 9 23
T_RIGHT (265) 9 23
T_NEWLINE (266) 2 3


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
calc (13)
    on left: 1 2 3, on right: 0
mixed_expression (14)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18,
    on right: 2 5 6 7 8 9 10 11 12 13 14 15 16 17
expression (15)
    on left: 19 20 21 22 23, on right: 3 10 11 12 13 14 15 16 17 18
    20 21 22 23


state 0

    0 $accept: . calc $end

    T_INT    shift, and go to state 1
    T_FLOAT  shift, and go to state 2
    T_LEFT   shift, and go to state 3

    $default  reduce using rule 1 (calc)

    calc              go to state 4
    mixed_expression  go to state 5
    expression        go to state 6


state 1

   19 expression: T_INT .

    $default  reduce using rule 19 (expression)


state 2

    4 mixed_expression: T_FLOAT .

    $default  reduce using rule 4 (mixed_expression)


state 3

    9 mixed_expression: T_LEFT . mixed_expression T_RIGHT
   23 expression: T_LEFT . expression T_RIGHT

    T_INT    shift, and go to state 1
    T_FLOAT  shift, and go to state 2
    T_LEFT   shift, and go to state 3

    mixed_expression  go to state 7
    expression        go to state 8


state 4

    0 $accept: calc . $end

    $end  shift, and go to state 9


state 5

    2 calc: mixed_expression . T_NEWLINE
    5 mixed_expression: mixed_expression . T_PLUS mixed_expression
    6                 | mixed_expression . T_MINUS mixed_expression
    7                 | mixed_expression . T_MULTIPLY mixed_expression
    8                 | mixed_expression . T_DIVIDE mixed_expression
   14                 | mixed_expression . T_PLUS expression
   15                 | mixed_expression . T_MINUS expression
   16                 | mixed_expression . T_MULTIPLY expression
   17                 | mixed_expression . T_DIVIDE expression

    T_PLUS      shift, and go to state 10
    T_MINUS     shift, and go to state 11
    T_MULTIPLY  shift, and go to state 12
    T_DIVIDE    shift, and go to state 13
    T_NEWLINE   shift, and go to state 14


state 6

    3 calc: expression . T_NEWLINE
   10 mixed_expression: expression . T_PLUS mixed_expression
   11                 | expression . T_MINUS mixed_expression
   12                 | expression . T_MULTIPLY mixed_expression
   13                 | expression . T_DIVIDE mixed_expression
   18                 | expression . T_DIVIDE expression
   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_MULTIPLY expression

    T_PLUS      shift, and go to state 15
    T_MINUS     shift, and go to state 16
    T_MULTIPLY  shift, and go to state 17
    T_DIVIDE    shift, and go to state 18
    T_NEWLINE   shift, and go to state 19


state 7

    5 mixed_expression: mixed_expression . T_PLUS mixed_expression
    6                 | mixed_expression . T_MINUS mixed_expression
    7                 | mixed_expression . T_MULTIPLY mixed_expression
    8                 | mixed_expression . T_DIVIDE mixed_expression
    9                 | T_LEFT mixed_expression . T_RIGHT
   14                 | mixed_expression . T_PLUS expression
   15                 | mixed_expression . T_MINUS expression
   16                 | mixed_expression . T_MULTIPLY expression
   17                 | mixed_expression . T_DIVIDE expression

    T_PLUS      shift, and go to state 10
    T_MINUS     shift, and go to state 11
    T_MULTIPLY  shift, and go to state 12
    T_DIVIDE    shift, and go to state 13
    T_RIGHT     shift, and go to state 20


state 8

   10 mixed_expression: expression . T_PLUS mixed_expression
   11                 | expression . T_MINUS mixed_expression
   12                 | expression . T_MULTIPLY mixed_expression
   13                 | expression . T_DIVIDE mixed_expression
   18                 | expression . T_DIVIDE expression
   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_MULTIPLY expression
   23           | T_LEFT expression . T_RIGHT

    T_PLUS      shift, and go to state 15
    T_MINUS     shift, and go to state 16
    T_MULTIPLY  shift, and go to state 17
    T_DIVIDE    shift, and go to state 18
    T_RIGHT     shift, and go to state 21


state 9

    0 $accept: calc $end .

    $default  accept


state 10

    5 mixed_expression: mixed_expression T_PLUS . mixed_expression
   14                 | mixed_expression T_PLUS . expression

    T_INT    shift, and go to state 1
    T_FLOAT  shift, and go to state 2
    T_LEFT   shift, and go to state 3

    mixed_expression  go to state 22
    expression        go to state 23


state 11

    6 mixed_expression: mixed_expression T_MINUS . mixed_expression
   15                 | mixed_expression T_MINUS . expression

    T_INT    shift, and go to state 1
    T_FLOAT  shift, and go to state 2
    T_LEFT   shift, and go to state 3

    mixed_expression  go to state 24
    expression        go to state 25


state 12

    7 mixed_expression: mixed_expression T_MULTIPLY . mixed_expression
   16                 | mixed_expression T_MULTIPLY . expression

    T_INT    shift, and go to state 1
    T_FLOAT  shift, and go to state 2
    T_LEFT   shift, and go to state 3

    mixed_expression  go to state 26
    expression        go to state 27


state 13

    8 mixed_expression: mixed_expression T_DIVIDE . mixed_expression
   17                 | mixed_expression T_DIVIDE . expression

    T_INT    shift, and go to state 1
    T_FLOAT  shift, and go to state 2
    T_LEFT   shift, and go to state 3

    mixed_expression  go to state 28
    expression        go to state 29


state 14

    2 calc: mixed_expression T_NEWLINE .

    $default  reduce using rule 2 (calc)


state 15

   10 mixed_expression: expression T_PLUS . mixed_expression
   20 expression: expression T_PLUS . expression

    T_INT    shift, and go to state 1
    T_FLOAT  shift, and go to state 2
    T_LEFT   shift, and go to state 3

    mixed_expression  go to state 30
    expression        go to state 31


state 16

   11 mixed_expression: expression T_MINUS . mixed_expression
   21 expression: expression T_MINUS . expression

    T_INT    shift, and go to state 1
    T_FLOAT  shift, and go to state 2
    T_LEFT   shift, and go to state 3

    mixed_expression  go to state 32
    expression        go to state 33


state 17

   12 mixed_expression: expression T_MULTIPLY . mixed_expression
   22 expression: expression T_MULTIPLY . expression

    T_INT    shift, and go to state 1
    T_FLOAT  shift, and go to state 2
    T_LEFT   shift, and go to state 3

    mixed_expression  go to state 34
    expression        go to state 35


state 18

   13 mixed_expression: expression T_DIVIDE . mixed_expression
   18                 | expression T_DIVIDE . expression

    T_INT    shift, and go to state 1
    T_FLOAT  shift, and go to state 2
    T_LEFT   shift, and go to state 3

    mixed_expression  go to state 36
    expression        go to state 37


state 19

    3 calc: expression T_NEWLINE .

    $default  reduce using rule 3 (calc)


state 20

    9 mixed_expression: T_LEFT mixed_expression T_RIGHT .

    $default  reduce using rule 9 (mixed_expression)


state 21

   23 expression: T_LEFT expression T_RIGHT .

    $default  reduce using rule 23 (expression)


state 22

    5 mixed_expression: mixed_expression . T_PLUS mixed_expression
    5                 | mixed_expression T_PLUS mixed_expression .
    6                 | mixed_expression . T_MINUS mixed_expression
    7                 | mixed_expression . T_MULTIPLY mixed_expression
    8                 | mixed_expression . T_DIVIDE mixed_expression
   14                 | mixed_expression . T_PLUS expression
   15                 | mixed_expression . T_MINUS expression
   16                 | mixed_expression . T_MULTIPLY expression
   17                 | mixed_expression . T_DIVIDE expression

    T_PLUS      shift, and go to state 10
    T_MINUS     shift, and go to state 11
    T_MULTIPLY  shift, and go to state 12
    T_DIVIDE    shift, and go to state 13

    T_PLUS      [reduce using rule 5 (mixed_expression)]
    T_MINUS     [reduce using rule 5 (mixed_expression)]
    T_MULTIPLY  [reduce using rule 5 (mixed_expression)]
    T_DIVIDE    [reduce using rule 5 (mixed_expression)]
    $default    reduce using rule 5 (mixed_expression)


state 23

   10 mixed_expression: expression . T_PLUS mixed_expression
   11                 | expression . T_MINUS mixed_expression
   12                 | expression . T_MULTIPLY mixed_expression
   13                 | expression . T_DIVIDE mixed_expression
   14                 | mixed_expression T_PLUS expression .
   18                 | expression . T_DIVIDE expression
   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_MULTIPLY expression

    T_PLUS      shift, and go to state 15
    T_MINUS     shift, and go to state 16
    T_MULTIPLY  shift, and go to state 17
    T_DIVIDE    shift, and go to state 18

    T_PLUS      [reduce using rule 14 (mixed_expression)]
    T_MINUS     [reduce using rule 14 (mixed_expression)]
    T_MULTIPLY  [reduce using rule 14 (mixed_expression)]
    T_DIVIDE    [reduce using rule 14 (mixed_expression)]
    $default    reduce using rule 14 (mixed_expression)


state 24

    5 mixed_expression: mixed_expression . T_PLUS mixed_expression
    6                 | mixed_expression . T_MINUS mixed_expression
    6                 | mixed_expression T_MINUS mixed_expression .
    7                 | mixed_expression . T_MULTIPLY mixed_expression
    8                 | mixed_expression . T_DIVIDE mixed_expression
   14                 | mixed_expression . T_PLUS expression
   15                 | mixed_expression . T_MINUS expression
   16                 | mixed_expression . T_MULTIPLY expression
   17                 | mixed_expression . T_DIVIDE expression

    T_PLUS      shift, and go to state 10
    T_MINUS     shift, and go to state 11
    T_MULTIPLY  shift, and go to state 12
    T_DIVIDE    shift, and go to state 13

    T_PLUS      [reduce using rule 6 (mixed_expression)]
    T_MINUS     [reduce using rule 6 (mixed_expression)]
    T_MULTIPLY  [reduce using rule 6 (mixed_expression)]
    T_DIVIDE    [reduce using rule 6 (mixed_expression)]
    $default    reduce using rule 6 (mixed_expression)


state 25

   10 mixed_expression: expression . T_PLUS mixed_expression
   11                 | expression . T_MINUS mixed_expression
   12                 | expression . T_MULTIPLY mixed_expression
   13                 | expression . T_DIVIDE mixed_expression
   15                 | mixed_expression T_MINUS expression .
   18                 | expression . T_DIVIDE expression
   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_MULTIPLY expression

    T_PLUS      shift, and go to state 15
    T_MINUS     shift, and go to state 16
    T_MULTIPLY  shift, and go to state 17
    T_DIVIDE    shift, and go to state 18

    T_PLUS      [reduce using rule 15 (mixed_expression)]
    T_MINUS     [reduce using rule 15 (mixed_expression)]
    T_MULTIPLY  [reduce using rule 15 (mixed_expression)]
    T_DIVIDE    [reduce using rule 15 (mixed_expression)]
    $default    reduce using rule 15 (mixed_expression)


state 26

    5 mixed_expression: mixed_expression . T_PLUS mixed_expression
    6                 | mixed_expression . T_MINUS mixed_expression
    7                 | mixed_expression . T_MULTIPLY mixed_expression
    7                 | mixed_expression T_MULTIPLY mixed_expression .
    8                 | mixed_expression . T_DIVIDE mixed_expression
   14                 | mixed_expression . T_PLUS expression
   15                 | mixed_expression . T_MINUS expression
   16                 | mixed_expression . T_MULTIPLY expression
   17                 | mixed_expression . T_DIVIDE expression

    T_PLUS      shift, and go to state 10
    T_MINUS     shift, and go to state 11
    T_MULTIPLY  shift, and go to state 12
    T_DIVIDE    shift, and go to state 13

    T_PLUS      [reduce using rule 7 (mixed_expression)]
    T_MINUS     [reduce using rule 7 (mixed_expression)]
    T_MULTIPLY  [reduce using rule 7 (mixed_expression)]
    T_DIVIDE    [reduce using rule 7 (mixed_expression)]
    $default    reduce using rule 7 (mixed_expression)


state 27

   10 mixed_expression: expression . T_PLUS mixed_expression
   11                 | expression . T_MINUS mixed_expression
   12                 | expression . T_MULTIPLY mixed_expression
   13                 | expression . T_DIVIDE mixed_expression
   16                 | mixed_expression T_MULTIPLY expression .
   18                 | expression . T_DIVIDE expression
   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_MULTIPLY expression

    T_PLUS      shift, and go to state 15
    T_MINUS     shift, and go to state 16
    T_MULTIPLY  shift, and go to state 17
    T_DIVIDE    shift, and go to state 18

    T_PLUS      [reduce using rule 16 (mixed_expression)]
    T_MINUS     [reduce using rule 16 (mixed_expression)]
    T_MULTIPLY  [reduce using rule 16 (mixed_expression)]
    T_DIVIDE    [reduce using rule 16 (mixed_expression)]
    $default    reduce using rule 16 (mixed_expression)


state 28

    5 mixed_expression: mixed_expression . T_PLUS mixed_expression
    6                 | mixed_expression . T_MINUS mixed_expression
    7                 | mixed_expression . T_MULTIPLY mixed_expression
    8                 | mixed_expression . T_DIVIDE mixed_expression
    8                 | mixed_expression T_DIVIDE mixed_expression .
   14                 | mixed_expression . T_PLUS expression
   15                 | mixed_expression . T_MINUS expression
   16                 | mixed_expression . T_MULTIPLY expression
   17                 | mixed_expression . T_DIVIDE expression

    T_PLUS      shift, and go to state 10
    T_MINUS     shift, and go to state 11
    T_MULTIPLY  shift, and go to state 12
    T_DIVIDE    shift, and go to state 13

    T_PLUS      [reduce using rule 8 (mixed_expression)]
    T_MINUS     [reduce using rule 8 (mixed_expression)]
    T_MULTIPLY  [reduce using rule 8 (mixed_expression)]
    T_DIVIDE    [reduce using rule 8 (mixed_expression)]
    $default    reduce using rule 8 (mixed_expression)


state 29

   10 mixed_expression: expression . T_PLUS mixed_expression
   11                 | expression . T_MINUS mixed_expression
   12                 | expression . T_MULTIPLY mixed_expression
   13                 | expression . T_DIVIDE mixed_expression
   17                 | mixed_expression T_DIVIDE expression .
   18                 | expression . T_DIVIDE expression
   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_MULTIPLY expression

    T_PLUS      shift, and go to state 15
    T_MINUS     shift, and go to state 16
    T_MULTIPLY  shift, and go to state 17
    T_DIVIDE    shift, and go to state 18

    T_PLUS      [reduce using rule 17 (mixed_expression)]
    T_MINUS     [reduce using rule 17 (mixed_expression)]
    T_MULTIPLY  [reduce using rule 17 (mixed_expression)]
    T_DIVIDE    [reduce using rule 17 (mixed_expression)]
    $default    reduce using rule 17 (mixed_expression)


state 30

    5 mixed_expression: mixed_expression . T_PLUS mixed_expression
    6                 | mixed_expression . T_MINUS mixed_expression
    7                 | mixed_expression . T_MULTIPLY mixed_expression
    8                 | mixed_expression . T_DIVIDE mixed_expression
   10                 | expression T_PLUS mixed_expression .
   14                 | mixed_expression . T_PLUS expression
   15                 | mixed_expression . T_MINUS expression
   16                 | mixed_expression . T_MULTIPLY expression
   17                 | mixed_expression . T_DIVIDE expression

    T_PLUS      shift, and go to state 10
    T_MINUS     shift, and go to state 11
    T_MULTIPLY  shift, and go to state 12
    T_DIVIDE    shift, and go to state 13

    T_PLUS      [reduce using rule 10 (mixed_expression)]
    T_MINUS     [reduce using rule 10 (mixed_expression)]
    T_MULTIPLY  [reduce using rule 10 (mixed_expression)]
    T_DIVIDE    [reduce using rule 10 (mixed_expression)]
    $default    reduce using rule 10 (mixed_expression)


state 31

   10 mixed_expression: expression . T_PLUS mixed_expression
   11                 | expression . T_MINUS mixed_expression
   12                 | expression . T_MULTIPLY mixed_expression
   13                 | expression . T_DIVIDE mixed_expression
   18                 | expression . T_DIVIDE expression
   20 expression: expression . T_PLUS expression
   20           | expression T_PLUS expression .
   21           | expression . T_MINUS expression
   22           | expression . T_MULTIPLY expression

    T_PLUS      shift, and go to state 15
    T_MINUS     shift, and go to state 16
    T_MULTIPLY  shift, and go to state 17
    T_DIVIDE    shift, and go to state 18

    T_PLUS      [reduce using rule 20 (expression)]
    T_MINUS     [reduce using rule 20 (expression)]
    T_MULTIPLY  [reduce using rule 20 (expression)]
    T_DIVIDE    [reduce using rule 20 (expression)]
    $default    reduce using rule 20 (expression)


state 32

    5 mixed_expression: mixed_expression . T_PLUS mixed_expression
    6                 | mixed_expression . T_MINUS mixed_expression
    7                 | mixed_expression . T_MULTIPLY mixed_expression
    8                 | mixed_expression . T_DIVIDE mixed_expression
   11                 | expression T_MINUS mixed_expression .
   14                 | mixed_expression . T_PLUS expression
   15                 | mixed_expression . T_MINUS expression
   16                 | mixed_expression . T_MULTIPLY expression
   17                 | mixed_expression . T_DIVIDE expression

    T_PLUS      shift, and go to state 10
    T_MINUS     shift, and go to state 11
    T_MULTIPLY  shift, and go to state 12
    T_DIVIDE    shift, and go to state 13

    T_PLUS      [reduce using rule 11 (mixed_expression)]
    T_MINUS     [reduce using rule 11 (mixed_expression)]
    T_MULTIPLY  [reduce using rule 11 (mixed_expression)]
    T_DIVIDE    [reduce using rule 11 (mixed_expression)]
    $default    reduce using rule 11 (mixed_expression)


state 33

   10 mixed_expression: expression . T_PLUS mixed_expression
   11                 | expression . T_MINUS mixed_expression
   12                 | expression . T_MULTIPLY mixed_expression
   13                 | expression . T_DIVIDE mixed_expression
   18                 | expression . T_DIVIDE expression
   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   21           | expression T_MINUS expression .
   22           | expression . T_MULTIPLY expression

    T_PLUS      shift, and go to state 15
    T_MINUS     shift, and go to state 16
    T_MULTIPLY  shift, and go to state 17
    T_DIVIDE    shift, and go to state 18

    T_PLUS      [reduce using rule 21 (expression)]
    T_MINUS     [reduce using rule 21 (expression)]
    T_MULTIPLY  [reduce using rule 21 (expression)]
    T_DIVIDE    [reduce using rule 21 (expression)]
    $default    reduce using rule 21 (expression)


state 34

    5 mixed_expression: mixed_expression . T_PLUS mixed_expression
    6                 | mixed_expression . T_MINUS mixed_expression
    7                 | mixed_expression . T_MULTIPLY mixed_expression
    8                 | mixed_expression . T_DIVIDE mixed_expression
   12                 | expression T_MULTIPLY mixed_expression .
   14                 | mixed_expression . T_PLUS expression
   15                 | mixed_expression . T_MINUS expression
   16                 | mixed_expression . T_MULTIPLY expression
   17                 | mixed_expression . T_DIVIDE expression

    T_PLUS      shift, and go to state 10
    T_MINUS     shift, and go to state 11
    T_MULTIPLY  shift, and go to state 12
    T_DIVIDE    shift, and go to state 13

    T_PLUS      [reduce using rule 12 (mixed_expression)]
    T_MINUS     [reduce using rule 12 (mixed_expression)]
    T_MULTIPLY  [reduce using rule 12 (mixed_expression)]
    T_DIVIDE    [reduce using rule 12 (mixed_expression)]
    $default    reduce using rule 12 (mixed_expression)


state 35

   10 mixed_expression: expression . T_PLUS mixed_expression
   11                 | expression . T_MINUS mixed_expression
   12                 | expression . T_MULTIPLY mixed_expression
   13                 | expression . T_DIVIDE mixed_expression
   18                 | expression . T_DIVIDE expression
   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_MULTIPLY expression
   22           | expression T_MULTIPLY expression .

    T_PLUS      shift, and go to state 15
    T_MINUS     shift, and go to state 16
    T_MULTIPLY  shift, and go to state 17
    T_DIVIDE    shift, and go to state 18

    T_PLUS      [reduce using rule 22 (expression)]
    T_MINUS     [reduce using rule 22 (expression)]
    T_MULTIPLY  [reduce using rule 22 (expression)]
    T_DIVIDE    [reduce using rule 22 (expression)]
    $default    reduce using rule 22 (expression)


state 36

    5 mixed_expression: mixed_expression . T_PLUS mixed_expression
    6                 | mixed_expression . T_MINUS mixed_expression
    7                 | mixed_expression . T_MULTIPLY mixed_expression
    8                 | mixed_expression . T_DIVIDE mixed_expression
   13                 | expression T_DIVIDE mixed_expression .
   14                 | mixed_expression . T_PLUS expression
   15                 | mixed_expression . T_MINUS expression
   16                 | mixed_expression . T_MULTIPLY expression
   17                 | mixed_expression . T_DIVIDE expression

    T_PLUS      shift, and go to state 10
    T_MINUS     shift, and go to state 11
    T_MULTIPLY  shift, and go to state 12
    T_DIVIDE    shift, and go to state 13

    T_PLUS      [reduce using rule 13 (mixed_expression)]
    T_MINUS     [reduce using rule 13 (mixed_expression)]
    T_MULTIPLY  [reduce using rule 13 (mixed_expression)]
    T_DIVIDE    [reduce using rule 13 (mixed_expression)]
    $default    reduce using rule 13 (mixed_expression)


state 37

   10 mixed_expression: expression . T_PLUS mixed_expression
   11                 | expression . T_MINUS mixed_expression
   12                 | expression . T_MULTIPLY mixed_expression
   13                 | expression . T_DIVIDE mixed_expression
   18                 | expression . T_DIVIDE expression
   18                 | expression T_DIVIDE expression .
   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_MULTIPLY expression

    T_PLUS      shift, and go to state 15
    T_MINUS     shift, and go to state 16
    T_MULTIPLY  shift, and go to state 17
    T_DIVIDE    shift, and go to state 18

    T_PLUS      [reduce using rule 18 (mixed_expression)]
    T_MINUS     [reduce using rule 18 (mixed_expression)]
    T_MULTIPLY  [reduce using rule 18 (mixed_expression)]
    T_DIVIDE    [reduce using rule 18 (mixed_expression)]
    $default    reduce using rule 18 (mixed_expression)
